Done skeleton of websocket connection handling and message routing
