# internal/app/controllers/websocket.go
@@ -1,21 +1,25 @@
 package controllers
 
 import (
+	"context"
 	"log/slog"
 
 	"github.com/gin-gonic/gin"
 	"github.com/gorilla/websocket"
+	"github.com/roackb2/lucid/internal/pkg/ws"
 )
 
 type WebsocketController struct {
+	ctx      context.Context
 	upgrader websocket.Upgrader
 }
 
-func NewWebsocketController() *WebsocketController {
-	return &WebsocketController{upgrader: websocket.Upgrader{}}
+func NewWebsocketController(ctx context.Context) *WebsocketController {
+	return &WebsocketController{ctx: ctx, upgrader: websocket.Upgrader{}}
 }
 
 func (ac *WebsocketController) SocketHandler(c *gin.Context) {
+	slog.Info("Websocket connection established")
 	conn, err := ac.upgrader.Upgrade(c.Writer, c.Request, nil)
 	if err != nil {
 		slog.Error("upgrade:", "error", err)
@@ -23,17 +27,6 @@ func (ac *WebsocketController) SocketHandler(c *gin.Context) {
 	}
 	defer conn.Close()
 
-	for {
-		mt, message, err := conn.ReadMessage()
-		if err != nil {
-			slog.Error("read:", "error", err)
-			break
-		}
-
-		err = conn.WriteMessage(mt, message)
-		if err != nil {
-			slog.Error("write:", "error", err)
-			break
-		}
-	}
+	handler := ws.NewWsHandler(conn)
+	handler.HandleConnection(ac.ctx)
 }
